[DEL] 不要ファイル削除

--- a/.github/workflows/qiita_sync.yml
+++ b/.github/workflows/qiita_sync.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  qiita_sync_check:
+  qiita_sync:
     name: Run qiita-sync sync
     runs-on: ubuntu-latest
     steps:
